--- a/package.json
+++ b/package.json
@@ -13,24 +13,30 @@
   "dependencies": {
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
+    "antd": "^3.25.0",
+    "antd-scss-theme-plugin": "^1.0.8",
     "autoprefixer": "^9.7.0",
     "clean-webpack-plugin": "^3.0.0",
+    "compression-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "import-glob-loader": "^1.1.0",
+    "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "node-sass-glob-importer": "^5.3.2",
     "postcss-loader": "^3.0.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^6.0.7",
     "style-loader": "^1.0.0",
+    "ts-import-plugin": "^1.6.1",
     "ts-loader": "^6.2.0",
     "typescript": "^3.6.4",
     "webpack": "^4.41.1",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2",
     "webpack-merge": "^4.2.2"
