--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
+    "@types/react-router-dom": "^5.1.2",
     "antd": "^3.25.0",
     "antd-scss-theme-plugin": "^1.0.8",
     "autoprefixer": "^9.7.0",
@@ -30,6 +31,7 @@
     "postcss-loader": "^3.0.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^1.0.0",
     "ts-import-plugin": "^1.6.1",
